# animepik-bot

./: README.md  docker-compose.override.yml  docker-compose.yml
app/: .gitignore  bot.dockerfile  pyproject.toml
app/alembic/: env.py  script.py.mako
app/app/: keyboards.py  main.py  utils.py
app/app/core/: bot.py  config.py  db.py
app/app/crud/: chat.py  chat_member.py  user.py
app/app/handlers/: chat.py
app/app/models/: __init__.py  chat.py  chat_member.py  user.py
