[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vobinics <vobinics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.9.2"
sqlalchemy = "^1.3.18"
pydantic = "^1.6.1"
psycopg2 = "^2.8.5"
alembic = "^1.4.2"
gino = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
